<resources>
    <string name="app_name">SOS</string>
    <string name="text_home" />
    <string name="text_compose" />
    <string name="text_profile" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="konekte">KONEKTE</string>
    <string name="mete_imel_ou_la">Ekri Imel ou</string>
    <string name="ou_blye_modpas_lan">Ou bliye Modpas lan ?</string>
    <string name="mete_modpas_la">Ekri Modpas la</string>
    <string name="oubyen">~ OUBYEN ~</string>
    <string name="byenveni">BYENVENI !</string>
    <string name="anrejistre">ANREJISTRE</string>
    <string name="editInfoBtn">Plis detay</string>
    <string name="cancel">ANILE</string>
    <string name="capture_image">CAMERA</string>
    <string name="sa_se_mesaj_sos_ou_se_li_ki_pral_jwenn_kontak_ou_ajoute_a">Sa se mesaj SOS ou. Se li ki pral jwenn kontak ou ajoute a.</string>
    <string name="mesaj_byenvini">Aplikasyon SOS pèmèt ou voye yon SMS ak yon mesaj Whatsapp otomatikman ou klike\nsou bouton SOS la.\nMesaj sa a pral jwenn kontak ijans ou yo.</string>
</resources>