<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_filled"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_contacts"
        android:enabled="true"
        android:icon="@drawable/ic_contacts_filled"
        android:title="@string/text_compose"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile_filled"
        android:title="@string/text_profile"
        app:showAsAction="ifRoom" />

</menu>